refactor(db,events,ui)!: SeaORM migration, reactive event flow, full cache-key IDs\n\n- Replace crude cache with SeaORM entities, repositories, and migrations\n- Add central EventBus with typed events; services emit, viewmodels subscribe\n- LibraryViewModel: incremental merges + debounced silent refresh during sync\n- DetailsViewModel: targeted in-place updates on MediaUpdated (no spinner)\n- PropertySubscriber: tolerate broadcast lag; prevent subscriber dropouts\n- Align domain model IDs with DB/events (use full cache key)\n- Update backends, services, and UI wiring accordingly\n\nBREAKING CHANGE: Domain model IDs now preserve the full cache key\n(backend_id:library_id:type:item_id). Stop assuming bare item IDs;\nderive components by splitting on ':' where needed.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,10 @@ toml = "0.9"
 
 # Database and caching
 sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
+sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono", "with-json", "with-uuid"] }
+sea-orm-migration = { version = "1.1", features = ["runtime-tokio-native-tls", "sqlx-sqlite"] }
+sea-query = "0.32"
+sea-query-binder = { version = "0.7", features = ["sqlx-sqlite"] }
 
 # Error handling
 anyhow = "1.0"
